# RLT

./: .env.example  README.md  main.py  pyproject.toml
src/commands/: __init__.py  aggregation.py  not_valid_request.py  start.py
src/config/: config.py  initialize.py
src/database/: __init__.py  aggregation_collection.py  client.py
src/filters/: __init__.py  is_json_request.py
src/utils/aggregation/: __init__.py  data_aggregation.py  request_to_database.py
src/utils/aggregation/schemas/: __init__.py  aggregation.py
